串口调试改为DMA模式

--- a/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
+++ b/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
@@ -21,25 +21,23 @@ Target DLL:      CMSIS_AGDI.dll V1.33.18.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\2025\STM32_project\STM32_Sensorless_BLDC\MDK-ARM\STM32_Sensorless_BLDC.uvprojx
-Project File Date:  01/28/2026
+d:\2025\STM32_project\STM32_Sensorless_BLDC\MDK-ARM\STM32_Sensorless_BLDC.uvprojx
+Project File Date:  01/30/2026
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'D:\Keil MDK\ARM\ARMCC\Bin'
 Build target 'STM32_Sensorless_BLDC'
 compiling main.c...
-../Core/Inc/main.h(193): warning:  #47-D: incompatible redefinition of macro "PI"  (declared at line 475 of "../Middlewares/ST/ARM/DSP/Inc/arm_math.h")
-  #define PI 3.1415926f
 ../Bsp/inc/MPU9250-DMP.h(52): warning:  #1295-D: Deprecated declaration MPU9250_DMP - give arg types
   int MPU9250_DMP();
 ../Bsp/inc/MPU9250-DMP.h(148): warning:  #1295-D: Deprecated declaration MPU9250_dataReady - give arg types
   
 ool MPU9250_dataReady();
-../Core/Src/main.c: 3 warnings, 0 errors
+../Core/Src/main.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=185756 RO-data=24500 RW-data=940 ZI-data=108876  
+Program Size: Code=185512 RO-data=24592 RW-data=956 ZI-data=109136  
 FromELF: creating hex file...
-"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 0 Error(s), 3 Warning(s).
+"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
