--- a/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
+++ b/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
@@ -27,7 +27,16 @@ Project File Date:  02/03/2026
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'D:\Keil MDK\ARM\ARMCC\Bin'
 Build target 'STM32_Sensorless_BLDC'
-"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 0 Error(s), 0 Warning(s).
+compiling uart_task.c...
+..\App\uart_task.c(40): warning:  #177-D: variable "data1"  was declared but never referenced
+          uint8_t data1 = data[0];//三环选取
+..\App\uart_task.c(42): warning:  #177-D: variable "data3"  was declared but never referenced
+          uint8_t data3 = data[2];//步长
+..\App\uart_task.c: 2 warnings, 0 errors
+linking...
+Program Size: Code=174612 RO-data=20852 RW-data=780 ZI-data=109140  
+FromELF: creating hex file...
+"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +59,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.1.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:07
 </pre>
 </body>
 </html>
