--- a/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
+++ b/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
@@ -27,11 +27,19 @@ Project File Date:  02/03/2026
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'D:\Keil MDK\ARM\ARMCC\Bin'
 Build target 'STM32_Sensorless_BLDC'
-compiling stm32f4xx_it.c...
+compiling main.c...
+../Bsp/inc/MPU9250-DMP.h(52): warning:  #1295-D: Deprecated declaration MPU9250_DMP - give arg types
+  int MPU9250_DMP();
+../Bsp/inc/MPU9250-DMP.h(148): warning:  #1295-D: Deprecated declaration MPU9250_dataReady - give arg types
+  
+ool MPU9250_dataReady();
+../Core/Src/main.c(171): warning:  #177-D: variable "dma_buffer"  was declared but never referenced
+  static uint8_t dma_buffer[256];
+../Core/Src/main.c: 3 warnings, 0 errors
 linking...
-Program Size: Code=173612 RO-data=20852 RW-data=780 ZI-data=109140  
+Program Size: Code=174880 RO-data=20940 RW-data=784 ZI-data=109136  
 FromELF: creating hex file...
-"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 0 Error(s), 0 Warning(s).
+"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -54,7 +62,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.1.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:06
+Build Time Elapsed:  00:00:08
 </pre>
 </body>
 </html>
